Fix css styling to wrap in wrapper

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,31 +80,6 @@ h2 {
 
 }
 
-
-#content_body {
-  /* 100 - 240 menu - 20px - 60px menu */
-  /* padding +20 on each side) */
-  padding-left: 300px;
-  // width: 600px;
-
-  width: calc(100% - 320px);
-  // width: calc(100% - 320px);
-  // width: calc(100% - 700px);
-
-
-  padding-right: 20px;
-  text-align: center;
-  // position: absolute;
-
-  float: right;
-  right: 0px;
-  // z-index: 1;
-  /* background-color: rgba(250, 250, 250, 0.2); */
-  min-height: 100%;
-
-
-}
-
 #welcome {
   margin: 0 auto;
   text-align: center;
@@ -136,21 +111,6 @@ h2 {
 }
 
 
-.footer {
-  text-align: center;
-  font-weight: bold;
-  position:absolute;
-  bottom:0;
-  width:100%;
-  height:60px;   /* Height of the footer */
-  // background-color: rgba(119, 118, 116, 0.8);
-  // height: 30px;
-  // top: calc(100% - 30px);
-  //   position: relative;
-    // padding-top: 10px;
-    // padding-bottom: 10px;
-    // vertical-align: middle;
-}
 
 * {
   padding: 0;
@@ -170,12 +130,15 @@ body {
   min-height: 100vh;
 
   .wrapper {
-    width: 300px;
-    height: 100vh;
+    width: 100%;
+    min-height: 100%;
+    // height: 100vh;
     background-color: none;
     position: absolute;
     background-size: cover;
     overflow: hidden;
+    padding-bottom:30px;
+
 
     span {
       z-index: 9999;
@@ -184,8 +147,8 @@ body {
       left: 10px;
       width: 35px;
       height: 4px;
-
-      background: black;
+      // background: black;
+      background: rgba(42, 42, 42, 0.8);
       cursor: pointer;
 
       &:before, &:after {
@@ -195,7 +158,8 @@ body {
         left: 0;
         height: 4px;
         width: 35px;
-        background: black;
+        // background: black;
+        background: rgba(42, 42, 42, 0.8);
       }
 
       &:before {
@@ -205,6 +169,27 @@ body {
       &:after {
         bottom: -8px;
       }
+    }
+
+    .content_body {
+      padding-left: 300px;
+      width: calc(100% - 320px);
+      padding-right: 20px;
+      text-align: center;
+      float: right;
+      right: 0px;
+      min-height: 100%;
+    }
+
+    .footer {
+      padding-top: 9px;
+      text-align: center;
+      font-weight: bold;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 30px;   /* Height of the footer */
+      background-color: rgba(187, 187, 187, 0.8);
     }
 
     .title {
@@ -235,7 +220,7 @@ body {
         left: 0;
         bottom: 0;
         animation: menu-anim 1.5s 1 ease-out normal;
-        width: 100%;
+        width: 25%;
         transition: all 0.5s ease;
 
         &.reverse-anim {
@@ -273,8 +258,9 @@ body {
               content: '';
               left: 0;
               bottom: -10px;
-              height: 5px;
-              background: #ffffff;
+              height: 2px;
+              // background: #ffffff;
+              background: rgba(42, 42, 42, 0.8);
               transform: translateX(-101%);
             }
 
